# pancake

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  package.xml  platforms.json
.github/workflows/: deploy.yml
docker/: Dockerfile  docker-compose.yml
docker/sources.list.d/: ubuntu-arm64.sources  ubuntu.sources
include/: pancakepch.h
include/pancake/: config.h  vector2.h
include/pancake/client/: client.h  drivetrain_view.h  tuner.h  view.h
include/pancake/robot/: robot.h
include/pancake/swerve/: drivetrain.h  feedforward.h  pid_controller.h  swerve.h  swerve_module.h
launch/: client.xml  input_test.xml  robot.xml  test.xml
msg/: ChassisSpeeds.msg  DrivetrainMeta.msg  Input.msg  Kill.msg  ModuleState.msg  OdometryState.msg  RobotTransform.msg  SVA.msg  SwerveRequest.msg
resource/: 2020_-_m3_t-nut_v2.stl  6812zz_ball.stl  6812zz_inner_ring.stl  6812zz_outer_ring.stl  6812zzst.stl  aluminium_extrusion_20x20x1000.stl  back_plate.stl  ball.stl  battery_bracket.stl  bottom_plate.stl  breaker_plate.stl  cage.stl  center_plate.stl  config.json  drive_shaft_gear.stl  edge-to-center_crossbar.stl  edge-to-crossbar_bracket.stl  front_plate.stl  gear_bracket.stl  inner_ring.stl  kula_v2.stl  mellan_ringen_v3.stl  nedre_ringen_v5.stl  non-gear_bracket.stl  outer_ring.stl  pdh_plate.stl  robot.urdf  rotation_axle.stl  rotation_axle_housing.stl  rotation_encoder_bracket.stl  rpi_plate.stl  sidoskydd_v5.stl  sla_battery.stl  standoff.stl  top_plate.stl  wheel_axle.stl  wheel_well_axle.stl  wheel_well_gear.stl  yttre_ringen_v5.stl
scripts/: Dockerfile.test  arm64.cmake  build.sh  buildenv.sh  cross-test.sh  install_deps.sh  launch.sh  ros.json  test.sh
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp  drivetrain_view.cpp  main.cpp  tuner.cpp
src/hardware_test/: CMakeLists.txt  main.cpp
src/robot/: CMakeLists.txt  main.cpp  robot.cpp
src/swerve/: CMakeLists.txt  drivetrain.cpp  main.cpp  swerve.cpp  swerve_module.cpp
srv/: PIDSVA.srv
test/: CMakeLists.txt  robot_tests.cpp  swerve_tests.cpp
